objects/b2bvp__Product_Video_I18N__c.object
<CustomObject>
    <fields>
        <fullName>b2bvp__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>b2bvp__Language__c</fullName>
        <label>Language</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>b2bvp__B2B_Product_Video_Locales</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>b2bvp__Product_Video__c</fullName>
        <label>Product Video</label>
        <referenceTo>b2bvp__Product_Video__c</referenceTo>
        <relationshipLabel>Product Video I18Ns</relationshipLabel>
        <relationshipName>Product_Video_I18Ns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>b2bvp__Title__c</fullName>
        <label>Title</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Product Video I18N</label>
    <listViews>
        <fullName>b2bvp__All</fullName>
        <columns>NAME</columns>
        <columns>b2bvp__Product_Video__c</columns>
        <columns>b2bvp__Language__c</columns>
        <columns>b2bvp__Title__c</columns>
        <columns>b2bvp__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PVI-{0000}</displayFormat>
        <label>Product Video I18N Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Video I18Ns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>